--- a/package.json
+++ b/package.json
@@ -19,7 +19,19 @@
     "db:migrate": "prisma migrate dev",
     "db:reset": "prisma migrate reset",
     "db:studio": "prisma studio",
-    "db:seed": "tsx prisma/seed.ts"
+    "db:seed": "tsx prisma/seed.ts",
+    "security:audit": "npm audit --audit-level moderate",
+    "security:fix": "npm audit fix",
+    "security:check": "npm run security:audit && npm run lint && npm run type-check",
+    "performance:analyze": "npm run build && npm run analyze",
+    "performance:lighthouse": "npx lighthouse http://localhost:3000 --only-categories=performance,accessibility,best-practices,seo --output=html --output-path=./reports/lighthouse.html",
+    "test:security": "npm run security:check",
+    "test:performance": "npm run performance:analyze",
+    "health:check": "curl -f http://localhost:3000/api/health || exit 1",
+    "docker:db": "docker-compose up -d postgres",
+    "docker:down": "docker-compose down",
+    "clean": "rm -rf .next && rm -rf node_modules/.cache",
+    "reset": "npm run clean && npm install && npm run db:reset"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.0",
@@ -28,23 +40,34 @@
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-slot": "^1.2.3",
     "@tanstack/react-query": "^5.83.0",
+    "@types/bcrypt": "^6.0.0",
     "@types/bcryptjs": "^3.0.0",
     "@types/jsonwebtoken": "^9.0.10",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "compression": "^1.8.1",
+    "cookie": "^1.0.2",
+    "cors": "^2.8.5",
+    "express-rate-limit": "^8.0.1",
     "framer-motion": "^12.23.9",
+    "helmet": "^8.1.0",
+    "jose": "^6.0.12",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.525.0",
     "next": "15.4.4",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "prisma": "^6.12.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.61.1",
+    "sanitize-html": "^2.17.0",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
+    "validator": "^13.15.15",
     "zod": "^4.0.10",
     "zustand": "^5.0.6"
   },
